--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<head>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Wiki de rucoy online</title>
+</head>
+
+
 <body>
 
 
-<header>RUCOY ONLINE</header>
+<header>RUCOY ONLINE:wiki</header>
 
 
 <h1>NOTICIAS!!</h1>
