--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html lang="pt-br">
+
 <head>
     <link rel="stylesheet" href="styles.css" />
     <title>Wiki de rucoy online</title>
@@ -7,15 +9,21 @@
 <body>
 
 
-<header>RUCOY ONLINE:wiki</header>
+    <header>RUCOY ONLINE:wiki</header>
 
+    <div>
+        < <h1>NOTICIAS!!</h1>
+            /div>
 
-<h1>NOTICIAS!!</h1>
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6wq5_YzMPNE?si=ZMYhkJyQSMSu98B1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6wq5_YzMPNE?si=ZMYhkJyQSMSu98B1"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
 
 
 </body>
+
+</html>
