--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>RUCOY ONLINE:wiki</header>
 
     <div>
-        < <h1>NOTICIAS!!</h1>
-            /div>
+         <h1>NOTICIAS!!</h1>
+    </div>
 
             <div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6wq5_YzMPNE?si=ZMYhkJyQSMSu98B1"
