--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <header>RUCOY ONLINE:wiki</header>
+    <header>RUCOY ONLINE WIKI</header>
 
     <div>
          <h1>NOTICIAS!!</h1>
