--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <header>RUCOY ONLINE WIKI</header>
 
+<section>
     <div>
          <h1>NOTICIAS!!</h1>
     </div>
@@ -22,7 +23,7 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-
+</section>
 
 </body>
 
