--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 
     <header>RUCOY ONLINE WIKI</header>
 
-<section>
-    <div>
+    <section>
+<div>
          <h1>NOTICIAS!!</h1>
     </div>
+
+    </section>
+
+<section>
+    
 
             <div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6wq5_YzMPNE?si=ZMYhkJyQSMSu98B1"
@@ -25,6 +30,17 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+
+<div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YttJzIcPntI?si=XBAUfeQZGqADOngb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+
+
+</section>
+
+<section>
+
 
 </section>
 
