--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section>
     
 
-            <div>
+            <div class="chamada-texto">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/6wq5_YzMPNE?si=ZMYhkJyQSMSu98B1"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
