--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </section>
 
 <section>
-<img src="https://images.app.goo.gl/F85fqsNjmx3sZw569"
+<img src="https://images.app.goo.gl/FU7V3HXMEaee7zET8"
 
 </section>
 
