--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </section>
 
 <section>
-<img src="https://images.app.goo.gl/FU7V3HXMEaee7zET8" />
+<img src="https://i.ytimg.com/vi/c7B4TcYGcLg/hqdefault.jpg" />
 
 </section>
 
