--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </section>
 
 <section>
-<img src="https://i.ytimg.com/vi/c7B4TcYGcLg/hqdefault.jpg" />
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjNYGJG1TSnvGxrYRZpb3rl-2eMrnbbjho_A&s" />
 
 </section>
 
