--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>RUCOY ONLINE WIKI</header>
 
     <section>
-<div>
+<div class="chamada-texto">
          <h1>NOTICIAS!!</h1>
     </div>
 
