--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
 </section>
 
-<section>
-<header>Classes</header>
+<div class="chamada-texto2">
 
-</section>
+
+<header>Classes</header>
+</div>
+
 
 </body>
 
