--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
 </div>
 </a>
 
-<div>
-<p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1gii3XsiM9g?si=7rO4bvBSBNzjjVhp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
-</p>
-</div>
+
 
 </section>
 
+<section>
+<div>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/1gii3XsiM9g?si=7rO4bvBSBNzjjVhp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+</div>
+
+    </section>
 
 <section class="title">
 <header>Classes</header>
