--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
 </div>
     </section>
 
-<section class="title">
-<header>Classes</header>
-</section>
+<div>
+
+    <header>Classes</header>
+</div>
+
+
 
 
 
