--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img src="blob:chrome-untrusted://media-app/dd614c5e-3e8c-4c5b-ba09-f40e937e4b8a" alt="">
+ <img src="https://i.redd.it/4ril6v467it81.gif" alt="">
 </b>
    
     
