--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img src="https://i.redd.it/4ril6v467it81.gif" alt="">
+ <img src="blob:chrome-untrusted://media-app/6945343f-2de5-427a-9151-6ae716d809f5" alt="">
 </b>
    
     
