--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img src="blob:chrome-untrusted://media-app/6945343f-2de5-427a-9151-6ae716d809f5" alt="">
+ <img draggable="false" src="blob:chrome-untrusted://media-app/e93255d0-0685-4a46-bf6e-f9eae9367477" alt="4ril6v467it81 (2) (2).gif" width="237" height="333">
 </b>
    
     
