--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img draggable="false" src="blob:chrome-untrusted://media-app/e93255d0-0685-4a46-bf6e-f9eae9367477" alt="4ril6v467it81 (2) (2).gif" width="237" height="333">
+ <img draggable="false" src="blob:chrome-untrusted://media-app/d71d73b9-cb7c-4faf-a5e6-3df568a3e0bb" alt="4ril6v467it81 (3).gif" width="285" height="289">
 </b>
    
     
