--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img draggable="false" src="blob:chrome-untrusted://media-app/d71d73b9-cb7c-4faf-a5e6-3df568a3e0bb" alt="4ril6v467it81 (3).gif" width="285" height="289">
+ <img src="https://s93.online-video-cutter.com/vcutter/o/s93s83av8VjDKGEgmH_gif_agsyryVw.mp4" alt="">
 </b>
    
     
