--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img src="https://s93.online-video-cutter.com/vcutter/o/s93s83av8VjDKGEgmH_gif_agsyryVw.mp4" alt="">
+ <img src="https://art.pixilart.com/7ea51bc9c490c21.png" alt="">
 </b>
    
     
