--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <b>
  <h3>Classes</h3>
- <img src="https://art.pixilart.com/7ea51bc9c490c21.png" alt="">
+ <img width="200" height="200"  src="https://art.pixilart.com/7ea51bc9c490c21.png" alt="">
 </b>
    
     
