--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <b>
  <h3>Classes</h3>
  <img width="200" height="200"  src="https://art.pixilart.com/7ea51bc9c490c21.png" alt="">
+ <img src="blob:chrome-untrusted://media-app/bbebcb23-682f-4f9d-bab0-643832cfccb7" alt="">
 </b>
    
     
