--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 
 
 <b>
- <h3>Classes</h3>
- <img width="200" height="200"  src="https://art.pixilart.com/7ea51bc9c490c21.png" alt="">
- <img src="blob:chrome-untrusted://media-app/7e6e0ba0-d561-4e82-85b6-f69717d6ff98" alt="">
+ <h3>Armas</h3>
+ <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/7/71/Dragon_Wand.PNG/revision/latest?cb=20240603004047&path-prefix=pt-br" alt="">
+ <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/c/c5/Dragon_Bow.PNG/revision/latest?cb=20240603004046&path-prefix=pt-br" alt="">
+ <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/2/25/Dragon_Slayer.PNG/revision/latest?cb=20240603004047&path-prefix=pt-br" alt="">
 </b>
    
     
