--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 
 <b>
  <h3>Armas</h3>
- <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/1/13/Royal_Priest_Wand.PNG/revision/latest?cb=20240603004100&path-prefix=pt-br" alt="">
- <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/7/7c/Golden_Bow.PNG/revision/latest?cb=20240603004049&path-prefix=pt-br" alt="">
- <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/2/25/Dragon_Slayer.PNG/revision/latest?cb=20240603004047&path-prefix=pt-br" alt="">
+ <img src="https://i.redd.it/meg5pt867it81.gif" alt="">
+
 </b>
    
     
