--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-<a>
+<select>
 <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YttJzIcPntI?si=XBAUfeQZGqADOngb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
-</a>
+</select>
 
 
 
@@ -63,7 +63,9 @@
 <section>
 <h5>Recomendaçoens de videos</h5>
 <div>
+    <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
     <img src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+    </a>
 </div>
 </section>
    
