--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h5>Recomendaçoens de videos</h5>
 <div>
     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
-    <img src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
     </a>
 </div>
 </section>
