--- a/index.html
+++ b/index.html
@@ -63,7 +63,20 @@
 <section>
 <h5>Recomendaçoens de videos</h5>
 <div>
-    <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
+   
+     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
+    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+    </a>
+     <a href="https://www.youtube.com/watch?v=I7mUb4AhpqM">
+    <img class="magem" src="https://img.youtube.com/vi/I7mUb4AhpqM/maxresdefault.jpg">
+    </a>
+     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
+    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+    </a>
+     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
+    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+    </a>
+     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
     <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
     </a>
 </div>
