--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
      <a href="https://www.youtube.com/watch?v=I7mUb4AhpqM">
     <img class="magem" src="https://img.youtube.com/vi/I7mUb4AhpqM/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
-    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=t9pK1hGBG2o">
+    <img class="magem" src="https://img.youtube.com/vi/t9pK1hGBG2o/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
-    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=1gii3XsiM9g">
+    <img class="magem" src="https://img.youtube.com/vi/1gii3XsiM9g/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
-    <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=XvCjQYQGKQU">
+    <img class="magem" src="https://img.youtube.com/vi/XvCjQYQGKQU/maxresdefault.jpg">
     </a>
 </div>
 </section>
