--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
      <a href="https://www.youtube.com/watch?v=I7mUb4AhpqM">
     <img class="magem" src="https://img.youtube.com/vi/I7mUb4AhpqM/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=t9pK1hGBG2o">
-    <img class="magem" src="https://img.youtube.com/vi/t9pK1hGBG2o/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=QLrFFHgzkb4">
+    <img class="magem" src="https://img.youtube.com/vi/QLrFFHgzkb4/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=1gii3XsiM9g">
-    <img class="magem" src="https://img.youtube.com/vi/1gii3XsiM9g/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=BRjxhjbiyM4">
+    <img class="magem" src="https://img.youtube.com/vi/BRjxhjbiyM4/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=XvCjQYQGKQU">
-    <img class="magem" src="https://img.youtube.com/vi/XvCjQYQGKQU/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=YV5cplxJRg">
+    <img class="magem" src="https://img.youtube.com/vi/YV5cplxJRg/maxresdefault.jpg">
     </a>
 </div>
 </section>
