--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <section>
 <h5>Recomendaçoens de videos</h5>
-<div>
+<div class="categoria-videos">
    
      <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
     <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
