--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
      <a href="https://www.youtube.com/watch?v=I7mUb4AhpqM">
     <img class="magem" src="https://img.youtube.com/vi/I7mUb4AhpqM/maxresdefault.jpg">
     </a>
-     <a href="https://www.youtube.com/watch?v=QLrFFHgzkb4">
-    <img class="magem" src="https://img.youtube.com/vi/QLrFFHgzkb4/maxresdefault.jpg">
+     <a href="https://www.youtube.com/watch?v=KEVIHa2zbhw">
+    <img class="magem" src="https://img.youtube.com/vi/KEVIHa2zbhw/maxresdefault.jpg">
     </a>
      <a href="https://www.youtube.com/watch?v=BRjxhjbiyM4">
     <img class="magem" src="https://img.youtube.com/vi/BRjxhjbiyM4/maxresdefault.jpg">
