--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
  <img src="https://i.redd.it/meg5pt867it81.gif" alt="">
 
 </b>
-<section>
+<div>
 <h5>Recomendaçoens de videos</h5>
-</section>
+</div>
 
 <section class="borda">
 
