--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     </section>
 
 
-<b>
+<section>
  <h3>Armas</h3>
  <img src="https://i.redd.it/meg5pt867it81.gif" alt="">
 
-</b>
+</section>
 
 <q>
   <h6>Alguns Mobs</h6>
