--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<q>
+<section>
   <h6>Alguns Mobs</h6>
   <img src="src="https://static.wikia.nocookie.net/rucoy-online/images/d/dd/Mummy.gif/revision/latest/thumbnail/width/360/height/360?cb=20160905103305"" alt="">  
 <img src="https://static.wikia.nocookie.net/rucoy-online/images/8/84/Vampire-0.gif/revision/latest/thumbnail/width/360/height/360?cb=20170422044034" alt="">
@@ -68,15 +68,15 @@
 
 
 
-</q>
-
-
-
-
-
-<section>
-<h5>Recomendaçoes de videos</h5>
 </section>
+
+
+
+
+
+<div>
+<h5>Recomendaçoes de videos</h5>
+</div>
 
 <section class="borda">
 
