--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
 <section>
   <h6>Alguns Mobs</h6>
-  <img src="src="https://static.wikia.nocookie.net/rucoy-online/images/d/dd/Mummy.gif/revision/latest/thumbnail/width/360/height/360?cb=20160905103305"" alt="">  
-<img src="https://static.wikia.nocookie.net/rucoy-online/images/8/84/Vampire-0.gif/revision/latest/thumbnail/width/360/height/360?cb=20170422044034" alt="">
-<img src="https://static.wikia.nocookie.net/rucoy-online/images/d/d1/Worm.gif/revision/latest/thumbnail/width/360/height/450?cb=20161020181159" alt="">
+  <img src="https://static.wikia.nocookie.net/rucoy-online/images/1/17/Pharaoh.gif/revision/latest?cb=20161020181240" alt=""> 
+<img src="" alt="">
+<img src="" alt="">
 
 
 
