--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 </section>
 
 <section>
-  <h6>Alguns Mobs</h6>
-  <img src="https://static.wikia.nocookie.net/rucoy-online/images/1/17/Pharaoh.gif/revision/latest?cb=20161020181240" alt=""> 
+  <h6>armaduras</h6>
+  <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/2/2d/Golden_Armor.PNG/revision/latest?cb=20240603004049&path-prefix=pt-br" alt=""> 
 <img src="" alt="">
 <img src="" alt="">
 
