--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
 
 <section>
   <h6>armaduras</h6>
-  <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/2/2d/Golden_Armor.PNG/revision/latest?cb=20240603004049&path-prefix=pt-br" alt=""> 
-<img src="" alt="">
-<img src="" alt="">
-
-
+<img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/2/2d/Golden_Armor.PNG/revision/latest?cb=20240603004049&amp;path-prefix=pt-br" jsaction="" class="sFlh5c FyHeAf iPVvYb" style="max-width: 509px; height: 293px; margin: 0px; width: 304px;" alt="Itens | Rucoy Online Brasil Wiki | Fandom" jsname="kn3ccd">
 
 </section>
 
