--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <section>
   <h6>armaduras</h6>
-<img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/2/2d/Golden_Armor.PNG/revision/latest?cb=20240603004049&amp;path-prefix=pt-br" jsaction="" class="sFlh5c FyHeAf iPVvYb" style="max-width: 509px; height: 293px; margin: 0px; width: 304px;" alt="Itens | Rucoy Online Brasil Wiki | Fandom" jsname="kn3ccd">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb48cKyCBvf8s2kt8cipzm4unBQ_UjuPCBL0qP4VNmzlfRkvZD_fmBpRqWWP581Ii5w_o&usqp=CAU" >
 
 </section>
 
