--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <section>
   <h6>armaduras</h6>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb48cKyCBvf8s2kt8cipzm4unBQ_UjuPCBL0qP4VNmzlfRkvZD_fmBpRqWWP581Ii5w_o&usqp=CAU" >
+<img width="300px" height="200px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb48cKyCBvf8s2kt8cipzm4unBQ_UjuPCBL0qP4VNmzlfRkvZD_fmBpRqWWP581Ii5w_o&usqp=CAU" >
 
 </section>
 
