--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <section class="borda">
 
-<div class="categoria-videos">
+<div class="categoria">
    
      <a href="https://www.youtube.com/watch?v=w9i8Monj6a8">
     <img class="magem" src="https://img.youtube.com/vi/w9i8Monj6a8/maxresdefault.jpg">
