--- a/index.html
+++ b/index.html
@@ -61,11 +61,8 @@
 </section>
 
 <section>
-  <h6>armaduras</h6>
-<img width="200px" height="200px" src=""
+    <h5>Recomendaçoes de videos</h5>
 </section>
-
-
 
 
 
