--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
     <h7>Sobre o jogo</h7>
 </div>
 
+<section>
+    <h8>O jogo conta com</h8>
+</section>
 
+<section>
+    <h9>|</h9>
+</section>
+
+<section>
+    <h10>\/</h10>
+</section>
 
 <section>
  <h3>Armas</h3>
