--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <h8>O jogo conta com</h8>
 </section>
 
-<section>
+<section class="po">
     <h9>|</h9>
 </section>
 
-<section>
+<section class="pa">
     <h10>\/</h10>
 </section>
 
