--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 </section>
 
 <section>
+    <h11>Armaduras</h11>
+    <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/7/73/Dragon_Armor.JPG/revision/latest?cb=20240603004046&path-prefix=pt-br" alt="">
+</section>
+
+<section>
  <h3>Armas</h3>
  <img src="https://i.redd.it/meg5pt867it81.gif" alt="">
 
