--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 </section>
 
 <section>
-    <h11>Armaduras</h11>
-    <img src="https://static.wikia.nocookie.net/rucoy-online-brasil/images/7/73/Dragon_Armor.JPG/revision/latest?cb=20240603004046&path-prefix=pt-br" alt="">
+    <h11 class="6">Armaduras</h11>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLemVKmKnRoJgMsaFm9cVaOWR2R-uNgnFLQw&s" alt="">
 </section>
 
 <section>
