--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </section>
 
 <section>
-    <h11 class="6">Armaduras</h11>
+    <h11 class="fr">Armaduras</h11>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLemVKmKnRoJgMsaFm9cVaOWR2R-uNgnFLQw&s" alt="">
 </section>
 
