--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
 
 </section>
 
+<section>
+    <h12>Acessorios</h12>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7jaZ29StwN062DHzvaU7PPOpUh4g-r6cZ0Q&s" alt="">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSybWr6fr0ttetOoWZX2pQhotuomSFCAMEnNfyek9Oe0zGx51kYEo8DNn9eHCaAg5Xyiw8&usqp=CAU" alt="">
+</section>
+
+
+
+
 <div class="deve">
     <h5>Recomendaçoes de videos</h5>
 </div>
