--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </section>
 
 <section>
-    <h12>Acessorios</h12>
+    <h12 class="re">Acessorios</h12>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7jaZ29StwN062DHzvaU7PPOpUh4g-r6cZ0Q&s" alt="">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSybWr6fr0ttetOoWZX2pQhotuomSFCAMEnNfyek9Oe0zGx51kYEo8DNn9eHCaAg5Xyiw8&usqp=CAU" alt="">
 </section>
