--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <section>
     <h12 class="re">Acessorios</h12>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7jaZ29StwN062DHzvaU7PPOpUh4g-r6cZ0Q&s" alt="">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSybWr6fr0ttetOoWZX2pQhotuomSFCAMEnNfyek9Oe0zGx51kYEo8DNn9eHCaAg5Xyiw8&usqp=CAU" alt="">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhNrziWQUR_4IBY5_yuvOQjBLYpkexGtuwVw&s" alt="">
 </section>
 
 
