--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <section>
     <h11 class="fr">Armaduras</h11>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTLemVKmKnRoJgMsaFm9cVaOWR2R-uNgnFLQw&s" alt="">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQQ_8xSen65qqTLHO0oQQ8fINoTmnCOtH1caw2JTAiUDKDt-BvzqaxzGxV8aKcelm-Nmk&usqp=CAU" alt="">
 </section>
 
 <section>
