--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
 
 <section>
  <h3>Armas</h3>
+ <a class="pl">
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQl4gZ88eYvC04nZW_KbASxc6sls-u_Mo3R_zhus3pXhFmS0gKsMUMvVtLzvY7aPrJfZ4&usqp=CAU" alt="">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRopmNFzxd2dqgXL8BBFUyMXw9UY2d5Tb8Zy8t3dOZgRhr-Xqpd5j_A885Us1XI7h-Om_M&usqp=CAU" alt="">
+</a>
 </section>
 
 <section>
