--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
 <section>
     <h12 class="re">Acessorios</h12>
+    <a class="ti">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7jaZ29StwN062DHzvaU7PPOpUh4g-r6cZ0Q&s" alt="">
+</a>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhNrziWQUR_4IBY5_yuvOQjBLYpkexGtuwVw&s" alt="">
 </section>
 
