--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 </section>
 <section>
     <h13 class="gt">Mobs</h13>
+    <div class="aq">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRBSiae9FSGLx4jayidHU1cPyi8992KMZc4Q&s" alt="">
+    </div>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6QHJDSRHE8VK86_reV_S0s8owul2lUO9Syg&s" alt="">
 </section>
 
