--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
    
     
 <div class="hu"> 
-    <h15>creditos ao canal:Jse Silva Coleçao</h15>
+    <h15>creditos ao canal:José Silva Coleção</h15>
 </div>
 
 
